<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <!--    <com.mari.uang.widget.TitleBarView-->
    <!--        android:id="@+id/title_bar"-->
    <!--        android:visibility="gone"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"/>-->

    <RelativeLayout
        android:background="@drawable/bg_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mari.uang.widget.StatusBarView
            android:id="@+id/status_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:visibility="gone"
            android:layout_below="@id/status_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="center"
            android:src="@drawable/ic_back_white" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp">

        <TextView
            android:id="@+id/tv_86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:text="+62"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ed_phone"
            style="@style/common_edit_view_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_86"
            android:hint="@string/login_phone_hint" />

        <View
            style="@style/common_input_bottom_line"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="25dp">

        <EditText
            android:id="@+id/ed_code"
            style="@style/common_edit_view_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/tv_code"
            android:hint="@string/login_phone_code" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/login_kirim_kode"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <View
            style="@style/common_input_bottom_line"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_sms"
        android:layout_width="173dp"
        android:layout_height="21dp"
        android:layout_gravity="right"
        android:layout_marginTop="19dp"
        android:text="@string/login_tidak_menerima_sms"
        android:textColor="#ff333333"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/bt_login"
        style="@style/common_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="23dp"
        android:enabled="false"
        android:text="@string/login_button_login" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="23dp">

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/check_box"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-3dp"
            android:layout_toEndOf="@id/check_box"
            android:text="@string/login_saya"
            android:textColor="#ff333333"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_link"
            android:layout_width="241dp"
            android:layout_height="18dp"
            android:layout_below="@id/tv_agreement"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/check_box"
            android:text="@string/login_kebijakan"
            android:textColor="@color/main_color"
            android:textSize="13sp" />
    </RelativeLayout>

</LinearLayout>