<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/splash_permission_title"
        android:textColor="@color/color_333333"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:paddingBottom="13dp"
        android:text="@string/splash_permission_message"
        android:textColor="@color/color_333333"
        android:textSize="16sp"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <ImageView
                    android:id="@+id/iv_contact"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_agreement_one" />

                <TextView
                    android:id="@+id/tv_contact_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_contact"
                    android:text="@string/splash_permission_contact"
                    android:textColor="@color/color_333333"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_contact_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_toRightOf="@id/iv_contact"
                    android:text="@string/splash_permission_contact_content"
                    android:textColor="@color/color_333333"
                    android:textSize="13sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <ImageView
                    android:id="@+id/iv_applist"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_agreement_two" />

                <TextView
                    android:id="@+id/tv_applist_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_applist"
                    android:text="@string/splash_permission_applist"
                    android:textColor="@color/color_333333"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_applist_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_toRightOf="@id/iv_applist"
                    android:text="@string/splash_permission_applist_content"
                    android:textColor="@color/color_333333"
                    android:textSize="13sp" />

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <ImageView
                    android:id="@+id/iv_sms"
                    android:layout_width="60dp"
                    android:layout_height="60dp" />

                <TextView
                    android:id="@+id/tv_sms_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_sms"
                    android:text="SMS:"
                    android:textColor="@color/color_333333"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sms_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_toRightOf="@id/iv_sms"
                    android:textColor="@color/color_333333"
                    android:textSize="13sp" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:padding="13dp"
        android:textColor="#000000"
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:background="@color/main_color"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_permission_submit"
        android:textSize="16sp" />

</LinearLayout>