<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape_white_r15"
    android:padding="13dp">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_confirm_idcard_title"
        android:textColor="@color/color_333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/llName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_27"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_idcard_str1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etName"
            style="@style/confirm_input_sty" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_idcard_str2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etNum"
            style="@style/confirm_input_sty"
            android:inputType="number"  />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llNum">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_idcard_str3"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etDay"
            style="@style/confirm_input_sty"
            android:layout_width="50dp"
            android:gravity="center"
            android:inputType="number"
            android:text="@={dialog.cardInfoModel.day}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="/"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etMonth"
            style="@style/confirm_input_sty"
            android:layout_width="50dp"
            android:gravity="center"
            android:inputType="number"
            android:text="@={dialog.cardInfoModel.month}"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="/"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />

        <EditText
            android:background="@drawable/bg_shape_r50"
            android:id="@+id/etYear"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textSize="14sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/btnConfirm"
        style="@style/common_button"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_27"
        android:text="@string/auth_face_submit"
        app:layout_constraintTop_toBottomOf="@id/llDate"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>