<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <com.mari.uang.widget.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/common_input_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="23dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_face_nomor"
                    android:textColor="@color/color_999999"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/face_item_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="23dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_face_nomor"
                    android:textColor="@color/color_999999"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/face_item_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="23dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_face_nomor"
                    android:textColor="@color/color_999999"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_card"
                    style="@style/face_item_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="23dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_face_nomor"
                    android:textColor="@color/color_999999"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_birthday"
                    style="@style/face_item_text" />

            </LinearLayout>

            <TextView
                android:layout_marginTop="15dp"
                android:drawablePadding="6dp"
                android:drawableLeft="@drawable/bg_svg_warning_red"
                android:textColor="@color/color_fa3649"
                android:text="@string/auth_face_warning"
                android:background="@color/color_fff7eb"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <RelativeLayout
                android:id="@+id/rl_card"
                android:layout_margin="23dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_card"
                    android:background="@color/color_f4f5f6"
                    android:layout_width="170dp"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_face_auth_card"
                    />

                <LinearLayout
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:layout_toEndOf="@id/img_card"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/auth_face_card_tips"
                        android:textColor="@color/color_999999"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_height="35dp"
                        android:layout_width="120dp"
                        android:gravity="center"
                        android:id="@+id/btnIdCard"
                        android:layout_marginTop="8dp"
                        style="@style/common_button"
                        android:text="@string/auth_face_upload"
                        />


                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_f4f5f6"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_23"
                />
            <RelativeLayout
                android:id="@+id/ll_face"
                android:layout_margin="23dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_card_face"
                    android:background="@color/color_f4f5f6"
                    android:layout_width="170dp"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_face_auth_face"
                    />

                <LinearLayout
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:layout_toEndOf="@id/img_card_face"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/auth_face_face_tips"
                        android:textColor="@color/color_999999"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:layout_height="35dp"
                        android:layout_width="120dp"
                        android:gravity="center"
                        android:id="@+id/bt_face"
                        android:layout_marginTop="8dp"
                        style="@style/common_button"
                        android:text="@string/auth_face_upload"
                        />


                </LinearLayout>


            </RelativeLayout>


            <TextView
                android:id="@+id/tv_tips"
                android:paddingBottom="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_face_tips"
                android:textColor="@color/color_999999"
                android:textSize="12sp"
                />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <TextView
        android:enabled="false"
        android:id="@+id/bt_submit"
        style="@style/common_button_no_radius"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/auth_face_submit" />


</LinearLayout>